[gd_scene load_steps=5 format=3 uid="uid://wdm1ufat1rfa"]

[ext_resource type="Script" path="res://Scripts/food.gd" id="1_3byi6"]
[ext_resource type="Texture2D" uid="uid://b8aqttgwc0xpy" path="res://Assets/banana.png" id="2_lpqi4"]
[ext_resource type="Texture2D" uid="uid://dy0dekqp5t4jq" path="res://Assets/attention.png" id="3_dxgs2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ladrt"]
size = Vector2(28, 22)

[node name="FastFood" type="Area2D" groups=["fast_food", "food"]]
script = ExtResource("1_3byi6")
lifespan = 1.35

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["fast_food", "food"]]
position = Vector2(0.5, -1)
shape = SubResource("RectangleShape2D_ladrt")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(-2.38419e-07, -1.66893e-06)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_lpqi4")

[node name="WarningSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_dxgs2")

[node name="LifeSpan" type="Timer" parent="."]
one_shot = true

[node name="Buffer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="LifeSpan" to="." method="_on_lifespan_timeout"]
[connection signal="timeout" from="Buffer" to="." method="_on_buffer_timeout"]
